Mon Jul 12 20:54:17 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/Definitions.h:

          Change operator< to double the distance and compare this with
          the range of valid positive values so that < would never be ambiguious,
          since the distance will always be even and range is odd.  Error was 
          exposed by UnitTests/SequenceNumber.cpp lines 38 and 42.

        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Added private function to determine what the previous sequence
          number should be.  Error was exposed by 
          UnitTest/DisjointSequence.cpp lines 213-223.

        * tests/DCPS/UnitTests/DisjointSequence.cpp:

          Added tests to expose errors in DisjointSequence logic.

        * tests/DCPS/UnitTests/SequenceNumber.cpp:
        * tests/DCPS/UnitTests/UnitTests.mpc:
        
          Added SequenceNumber tests.

Mon Jul 12 20:03:15 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/idl/CPPTemplate.txt:

          Corrected the behave when subscriber has INSTANCE or TOPIC
          presentation qos and publisher has GROUP presentation qos.

        * dds/DCPS/DomainParticipantImpl.cpp:

          Added check for nil bit_pub_dr_ in ownership_manager().
          This prvents crash when builtin topic is turned off in a non
          minimum bit build.

        * tests/DCPS/GroupPresentation/DataReaderListener.cpp:
        * tests/DCPS/GroupPresentation/SubscriberListener.h:
        * tests/DCPS/GroupPresentation/SubscriberListener.cpp:
        * tests/DCPS/GroupPresentation/run_test.pl:
        * tests/DCPS/GroupPresentation/subscriber.cpp:

          Added subscriber TOPIC and INSTANCE test cases.

        * bin/dcps_tests.lst:

          Added GroupPresentation new test cases.
